# gparallel

./: .gitmodules  .travis.yml  CMakeLists.txt  CmakeLists.txt  ENGLISH.md  README.md
demo/: advprocess.cpp
include/: dag.h  dag_instance.h  dag_schema.h  debug.h  executor.h  glist.h  gparallel.h  input_meta_imp.h  invoke_ex.h  meta.h  meta_decorator.h  meta_deduce.h  node.h  node_container.h  node_deduce.h  node_info.h  node_instance.h  node_schema.h  node_schema.hh  nodes.h  parameter_traits.h  push_io.h  type_id.h  util.h  varlist.h
src/: dag.cpp  dag_instance.cpp  dag_schema.cpp  debug.cpp  main.cpp  node.cpp  node_container.cpp  node_info.cpp  node_instance.cpp  node_schema.cpp  topological_sort.cpp  util.cpp
test/: main.cpp  test_data_meta.cpp  test_deduce.cpp  test_executor.cpp  test_find_index.cpp  test_invoke_ex.cpp  test_node.cpp  test_register_node.cpp  test_type_id.cpp  test_varlist.cpp
